--- a/main/page_auth/templates/update_user.html
+++ b/main/page_auth/templates/update_user.html
@@ -23,7 +23,7 @@
       <h3>Update Username</h3>
       <!--Update Username-->
       <form action="#" method="POST" name="UpdateUsername" id="update-username-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_username_form.csrf_token }}
+        {{ update_username_form.csrf_token(class_="form-control", id_="csrf-token-username") }}
         <div>
           Current username: {{ current_user.username }}
         </div>
@@ -50,7 +50,7 @@
           {% endfor %}
         </div>
         <div class="form-group">
-          {{ update_username_form.submit(class_="btn btn-primary") }}
+          {{ update_username_form.submit(class_="btn btn-primary", id_="submit-username") }}
         </div>
       </form>
     </div>
@@ -59,7 +59,7 @@
     <div id="email-form" class="form-container" style="display: none;">
       <h3>Update Email</h3>
       <form action="#" method="POST" name="UpdateEmail" id="update-email-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_email_form.csrf_token }}
+        {{ update_email_form.csrf_token(class_="form-control", id_="csrf-token-email") }}
         <div>
           Current email: {{ masked_email }}
         </div>
@@ -86,7 +86,7 @@
           {% endfor %}
         </div>
         <div class="form-group">
-          {{ update_email_form.submit(class_="btn btn-primary") }}
+          {{ update_email_form.submit(class_="btn btn-primary", id_="submit-email") }}
         </div>
       </form>
     </div>
@@ -95,7 +95,7 @@
     <div id="password-form" class="form-container" style="display: none;">
       <h3>Update Password</h3>
       <form action="#" method="POST" name="UpdatePassword" id="update-password-form" action="{{ url_for('auth_page.update_user') }}">
-        {{ update_password_form.csrf_token }}
+        {{ update_password_form.csrf_token(class_="form-control", id_="csrf-token-password") }}
         <div class="form-group">
           <label for="current-password-password" class="form-label">
             Current Password
@@ -130,7 +130,7 @@
           {% endfor %}
         </div>
         <div class="form-group">
-          {{ update_password_form.submit(class_="btn btn-primary") }}
+          {{ update_password_form.submit(class_="btn btn-primary", id_="submit-password") }}
         </div>
       </form>
     </div>
